Updated Readme.md with project description

--- a/website/index.html
+++ b/website/index.html
@@ -169,16 +169,16 @@
 	</style>
 
 	<body>
-		<a target="_blank" class="main" href="https://gitlab.com/catamphetamine/libphonenumber-js"><code>libphonenumber-js</code></a>
+		<a target="_blank" class="main" href=".."><code>libphonenumber-js</code></a>
 
-		<p>A simpler and smaller rewrite of Google Android's <a target="_blank" href="https://github.com/googlei18n/libphonenumber">libphonenumber</a> library.</p>
+		<p>A simpler and smaller rewrite of Google Android's <a target="_blank" href="....">libphonenumber</a> library.</p>
 
 		<!--
-		<p>This is a demo for the new API. <a href="https://catamphetamine.gitlab.io/libphonenumber-js/legacy.html">See legacy API demo</a>.</p>
+		<p>This is a demo for the new API. <a href="......">See legacy API demo</a>.</p>
 		-->
 
 		<p>
-		Note: This demo uses "max" metadata set. <a href="https://gitlab.com/catamphetamine/libphonenumber-js#min-vs-max-vs-mobile-vs-core">See readme on "min" vs "max" vs "mobile"</a>.
+		Note: This demo uses "max" metadata set. <a href="..#min-vs-max-vs-mobile-vs-core">See readme on "min" vs "max" vs "mobile"</a>.
 		</p>
 
 		<div id="content"></div>
@@ -296,7 +296,6 @@
 							<h2 id="as-you-type">As you type</h2>
 
 							{/* type="tel" introduces bugs on Samsung Android phones */}
-							{/* https://github.com/catamphetamine/react-phone-number-input/issues/59 */}
 							<ReactInput
 								placeholder="Enter a phone number"
 								value={this.state.asYouTypeValue}
@@ -398,7 +397,7 @@
 				}
 			}
 
-			// https://stackoverflow.com/questions/22677931/react-js-onchange-event-for-contenteditable/27255103#27255103
+			// ..questions/22677931/react-js-onchange-event-for-contenteditable/27255103#27255103
 			class ContentEditable extends React.Component {
 				render() {
 					return <div id="contenteditable"
